Also see Moose::Manual::Delta for more details of, and workarounds
for, noteworthy changes.

   * Moose::Util::TypeConstraints
     - Sped up the type constraint parsing regex. (Sam Vilain)

   * Makefile.PL
     - Use Module::Install extensions explicitly to avoid confusing errors if
       they're not installed
     - Use Module::Install::AuthorRequires to stop test extraction and general
       failures if you don't have the author side dependencies installed

   * Test::Moose
     - Added a with_immutable test function, to run a block of tests with and
       without certain classes being immutable. (doy)

0.94
    * Moose::Cookbook::Basics::Recipe4
      - Grammar error [rt.cpan.org #51791] (Amir E. Aharoni)
    * Moose::Util::TypeConstraints
      - Changed Str constraint to accept magic lvalue strings like one gets
        from substr et al, again. (sorear)

0.93 Thu, Nov 19, 2009
    * Moose::Object
      - Calling $object->new() is no longer deprecated, and no longer
        warns. (doy)

    * Moose::Meta::Role
      - The get_attribute_map method is now deprecated. (Dave Rolsky)

    * Moose::Meta::Method::Delegation
      - Preserve variable aliasing in @_ for delegated methods, so that
        altering @_ affects the passed value. (doy)

    * Moose::Util::TypeConstraints
      - Allow array refs for non-anonymous form of enum and duck_type, not
        just anonymous. The non-arrayref forms may be removed in the
        future. (doy)
      - Changed Str constraint to not accept globs (*STDIN or *FOO). (chansen)
      - Properly document Int being a subtype of Str. (doy)

    * Moose::Exporter
      - Moose::Exporter using modules can now export their functions to the
        main package. This applied to Moose and Moose::Role, among
        others. (nothingmuch)

    * Moose::Meta::Attribute
      - Don't remove attribute accessors we never installed, during
        remove_accessors. (doy)

    * Moose::Meta::Attribute::Native::Trait::Array