@@ -1,6 +1,10 @@
 Also see Moose::Manual::Delta for more details of, and workarounds
 for, noteworthy changes.
 
+   * Moose::Meta::Role
+     - Added a 'consumers' method for finding all classes/roles which consume
+       the given role. (doy)
+
    * Moose::Util::TypeConstraints
      - Sped up the type constraint parsing regex. (Sam Vilain)
 
